replace xtdb v2 with sqlite for OLTP, optional xtdb v2 replica
Two big pieces:

1. Replace xtdb v2 with sqlite for OLTP. Motivated by xtdb's
   poor performance on certain write-heavy loads and lack of
   index support. Written in a way that hopefully can also
   support postgres as a drop-in replacement, but not yet tested.

2. To preserve immutability for time travel, xtdb is available
   optionally as an OLAP that will ingest the audit log produced
   by the SQL server. This will let it mirror its state and serve
   as a read-only replica to support the as-of query parameter.
   Defaults to off, except in dev.